--- a/1-Authentication/0-sign-in-vanillajs/App/public/redirect.html
+++ b/1-Authentication/0-sign-in-vanillajs/App/public/redirect.html
@@ -4,3 +4,10 @@
     For more information, please follow this link: 
     https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-browser/docs/login-user.md#redirecturi-considerations 
 -->
+<script src="/msal-browser.min.js"></script>
+<script type="text/javascript" src="./authConfig.js"></script>
+<script type="text/javascript" src="./ui.js"></script>
+<script type="text/javascript" src="./claimUtils.js"></script>
+<script type="text/javascript" src="./authRedirect.js"></script>
+<!-- comment the above line and uncomment the line below if you would like to use the popup flow -->
+<!-- <script type="text/javascript" src="./authPopup.js"></script> -->
