remove azure wording

--- a/1-Authentication/0-sign-in-vanillajs/App/public/signout.html
+++ b/1-Authentication/0-sign-in-vanillajs/App/public/signout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Azure AD | Vanilla JavaScript SPA</title>
+    <title>Microsoft Entra External ID | Vanilla JavaScript SPA</title>
     <link rel="SHORTCUT ICON" href="./favicon.svg" type="image/x-icon">
 
     <!-- adding Bootstrap 4 for UI components  -->
