--- a/2-Authorization/0-call-api-vanillajs/SPA/public/index.html
+++ b/2-Authorization/0-call-api-vanillajs/SPA/public/index.html
@@ -7,10 +7,8 @@
     <title>Microsoft identity platform</title>
     <link rel="SHORTCUT ICON" href="./favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
-    <!-- msal.min.js can be used in the place of msal.js; included msal.js to make debug easy -->
-    <script id="load-msal" src="https://alcdn.msauth.net/browser/2.31.0/js/msal-browser.js"
-        integrity="sha384-BO4qQ2RTxj2akCJc7t6IdU9aRg6do4LGIkVVa01Hm33jxM+v2G+4q+vZjmOCywYq"
-        crossorigin="anonymous"></script>
+    <!-- msal.min.js can be used in the place of msal-browser.js -->
+    <script src="/msal-browser.min.js"></script>
     <!-- adding Bootstrap 5 for UI components  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
